chore: Rename package to esc_pos_bluetooth_plus and update dependencies for Dart 3.6.1 compatibility

--- a/example/blue/ios/Runner/Info.plist
+++ b/example/blue/ios/Runner/Info.plist
@@ -50,5 +50,9 @@
 		<string>bluetooth-central</string>
 		<string>bluetooth-peripheral</string>
 	</array>
+	<key>CADisableMinimumFrameDurationOnPhone</key>
+	<true/>
+	<key>UIApplicationSupportsIndirectInputEvents</key>
+	<true/>
 </dict>
 </plist>
